Refactor code structure for improved readability and maintainability

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
         <a href="/index.html" id="logo">
           <img src="Imagenes/Navbar/Logo.svg" alt="Logo" />
         </a>
-        <a href="/inicio-sesion" id="usuario" style="display: none;">
+        <a href="/inicio-sesion" id="usuario">
           <img src="Imagenes/Navbar/Inversor.svg" alt="Usuario" />
         </a>
       </nav>
