--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -300,7 +300,7 @@ import Layout from '../layouts/Layout.astro';
                     <p class="subtexto" id="subtexto-grupos">Charla sobre startups prometedoras e<br> interactúa con otros usuarios</p>
 
                     <section class="contenedor" id="contenedor-grupos">
-                        <img class="foto-grupos" src="Imagenes/Bento Inversores 2/Grupos.png">
+                        <img class="foto-grupos" src="Imagenes/Bento Inversores 2/Grupos.svg">
                     </section>
                 </section>
 
@@ -1096,7 +1096,7 @@ img#transicion-1{
 }
 
 img#transicion-3{
-    top: 2360px;
+    top: 2100px;
     left: -100px;
 }
 
