Refactor code structure for improved readability and maintainability

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,13 +12,13 @@ import Layout from '../layouts/Layout.astro';
         </header>
 
         <div class="botones fade-in-up delay-2">
-            <a href="/inicio-sesion"><button id="inicia-sesion" style="display: none;">Inicia Sesión</button></a>
-            <a href="/registro"><button id="registrate" style="display: none;">Regístrate</button></a>
-            <a href="/waitlist"><button id="waitlist">ÚNETE A LA WAITLIST</button></a>
+            <a href="/inicio-sesion"><button id="inicia-sesion">Inicia Sesión</button></a>
+            <a href="/registro"><button id="registrate">Regístrate</button></a>
+            <a href="/waitlist"><button id="waitlist" style="display: none;">ÚNETE A LA WAITLIST</button></a>
         </div>
 
         <div class="fade-in-up delay-3">
-            <img id="dashboard" src="Imagenes/Dashboard/Dashboard.png" loading="lazy">
+            <img id="dashboard" src="Imagenes/Dashboard/Dashboard Def.svg" loading="lazy">
         </div>
 
         <!--
@@ -488,12 +488,12 @@ button{
 }
 
 button#inicia-sesion{
-    width: 162px;
-    height: 45px;
+    width: 182px;
+    height: 50px;
     color: #fff;
     font-family: "Inter";
     font-weight: 600;
-    font-size: 13px;
+    font-size: 14.5px;
     letter-spacing: 4%;
     background-color: #111322;
     border: 1px solid #1E202F;
@@ -503,14 +503,14 @@ button#inicia-sesion{
 }
 
 button#registrate{
-    width: 120px;
-    height: 46px;
+    width: 140px;
+    height: 50px;
     color: #fff;
     font-family: "Inter";
     font-weight: 600;
-    font-size: 13px;
+    font-size: 14.5px;
     background: linear-gradient(180deg, #683FEA, #a47cf3 99%);
-    margin-left: 15px;
+    margin-left: 25px;
     border-radius: 5px;
     position: relative;
     border: none;
@@ -553,11 +553,10 @@ button#registrate::before {
 
 img#dashboard{
     position: relative;
-    top: 70px;
+    top: -5px;
     display: block;
     margin: auto;
-    width: 1115.08px;
-    height: 603.662px;
+    width: 1235px;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -1096,7 +1095,7 @@ img#transicion-1{
 }
 
 img#transicion-3{
-    top: 2100px;
+    top: 2250px;
     left: -100px;
 }
 
