--- a/src/pages/inicio-sesion.astro
+++ b/src/pages/inicio-sesion.astro
@@ -22,7 +22,7 @@ import Layout from '../layouts/Layout-registro.astro';
             </div>            
             <button id="submit-btn" type="submit"><img id="flecha" src="Imagenes/Registro/Flecha.svg"></button>
         </form>
-        <!-- <a id="iniciar" href="https://dev-3cukw7bzrlcixy2o.us.auth0.com/authorize?response_type=code&client_id=IFvhehTi8BtAMwRD9QLXi0AKnNIjTraf&redirect_uri=http://localhost:5000/api/auth/callback&scope=openid%20profile%20email&connection=google-oauth2">
+        <!-- <a id="iniciar" href="https://dev-3cukw7bzrlcixy2o.us.auth0.com/authorize?response_type=code&client_id=IFvhehTi8BtAMwRD9QLXi0AKnNIjTraf&redirect_uri=https://backend-l3s8.onrender.com/api/auth/callback&scope=openid%20profile%20email&connection=google-oauth2">
             <img id="google" src="Imagenes/Registro/Inicia sesion con google.svg" alt="Inicia sesión con Google">
         </a> -->
         <p class="texto-abajo"><span id="regular">¿No tienes cuenta todavía?</span><a href="/registro" id="texto-abajo">Regístrate</a></p>
@@ -155,7 +155,7 @@ import Layout from '../layouts/Layout-registro.astro';
         async function handleLogin(email: string, password: string) {
             try {
                 const response = await axios.post(
-                    'http://localhost:5000/api/auth/iniciar-sesion',
+                    'https://backend-l3s8.onrender.com/api/auth/iniciar-sesion',
                     { email, password },
                     { withCredentials: true } // 👈 Necesario para que se guarden las cookies
                 );
