fix: actualizar URL del servidor de desarrollo a producción en README y registro.astro

--- a/src/pages/registro.astro
+++ b/src/pages/registro.astro
@@ -114,7 +114,7 @@ import Layout from '../layouts/Layout-registro.astro';
                     );
     
                     if (response.status === 201) {
-                        window.location.href = 'http://localhost:4321/seleccionar-rol';
+                        window.location.href = 'http://https://landing-fu62u3718-astraes-projects-b730cac9.vercel.app/seleccionar-rol';
                     } else {
                         console.error('Error en el registro:', response.data);
                         alert('Error en el registro, por favor intenta nuevamente.');
