--- a/src/pages/crear-startup.astro
+++ b/src/pages/crear-startup.astro
@@ -256,7 +256,7 @@ import Layout from '../layouts/Layout-registro.astro';
         const porcentaje = porcentajeInput.value;
 
         // Enviar la solicitud POST con axios
-        const response = await axios.post(`https://backend-l3s8.onrender.com/api/auth/crear-startup/${userId}`, {
+        const response = await axios.post(`https://api.astraesystem.com/api/auth/crear-startup/${userId}`, {
             nombre_startup,
             ciudad,
             pais,
@@ -270,7 +270,7 @@ import Layout from '../layouts/Layout-registro.astro';
 
         // Manejo de la respuesta
         if (response.status === 200) {
-            window.location.href = 'http://localhost:3000/';
+            window.location.href = 'https://app.astraesystem.com/';
         } else {
             alert('Hubo un problema al completar el registro.');
         }
